--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item px-lg-4"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item px-lg-4"><a class="nav-link" href="about.html" target="_blank">Is it dentophobia?</a></li>
-                    <li class="nav-item px-lg-4"><a class="nav-link" href="products.html" target="_blank">Office</a></li>
-                    <li class="nav-item px-lg-4"><a class="nav-link" href="store.html" target="_blank">Dentistcam</a></li>
+                    <li class="nav-item px-lg-4"><a class="nav-link" href="office.html" target="_blank">Office</a></li>
+                    <li class="nav-item px-lg-4"><a class="nav-link" href="cam.html" target="_blank">Dentistcam</a></li>
                 </ul>
             </div>
         </div>
