--- a/office.html
+++ b/office.html
@@ -25,8 +25,8 @@
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item px-lg-4"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item px-lg-4"><a class="nav-link" href="about.html">Is it dentophobia?</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link" href="products.html">Office</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link" href="store.html">Dentistcam</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link" href="office.html">Office</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link" href="cam.html">Dentistcam</a></li>
                     </ul>
                 </div>
             </div>
